architecture/front-end/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: prod
spec:
  selector:
    matchLabels:
      app: front-end
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
        - name: front-end
          image: keke65/breizhsport-front:v0.0.2
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 150m
              memory: 250Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
